fix text align bug

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1190,7 +1190,6 @@ figure.highlight,
     .line {
         height: 1.3em;
         font-size: 13px;
-        color: #666;
     }
 }
 
